--- a/Frogger/Frogger.vcxproj.filters
+++ b/Frogger/Frogger.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClCompile Include="Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Scene_Frogger.cpp">
+    <ClCompile Include="Scene_Purr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Scene_Menu.cpp">
@@ -92,7 +92,7 @@
     <ClInclude Include="Scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Scene_Frogger.h">
+    <ClInclude Include="Scene_Purr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Scene_Menu.h">
